@@ -179,7 +179,7 @@ they exist.</p>
 <p><strong>run</strong> <em>&lt;command&gt;</em> -- exec the given Python command.</p>
 <p><strong>runfile</strong> <em>&lt;file1&gt; [ &lt;file2&gt; ... ]</em> -- execute the given files.</p>
 <p><strong>sleep</strong> <em>[&lt;seconds&gt;]</em> -- sleep the given number of seconds.  Defaults to 1 second.</p>
-<p><strong>reset_state</strong> -- reset the browser.</p>
+<p><strong>reset_browser</strong> -- reset the browser.</p>
 <p><strong>extend_with</strong> <em>&lt;module&gt;</em> -- import commands from Python module.  This acts
 like <tt class="docutils literal"><span class="pre">from</span> <span class="pre">&lt;module&gt;</span> <span class="pre">import</span> <span class="pre">*</span></tt> does in Python, so e.g. a function
 <tt class="docutils literal"><span class="pre">fn</span></tt> in <tt class="docutils literal"><span class="pre">extmodule</span></tt> would be available as <tt class="docutils literal"><span class="pre">fn</span></tt>.  See <em>examples/extend_example.py</em> for an example.</p>
@@ -208,7 +208,7 @@ can be annoying to determine exactly what form field <cite>formvalue</cite> is
 going to pick based on your field name, or what form &amp; field <cite>submit</cite>
 is going to &quot;click&quot; on.</p>
 <p>Here is the pseudocode for how <cite>formvalue</cite> and <cite>submit</cite> figure out
-what form to use (function <cite>twill.commands.state.get_form</cite>):</p>
+what form to use (function <cite>twill.commands.browser.get_form</cite>):</p>
 <pre class="literal-block">
 for each form on page:
     if supplied regexp pattern matches the form name, select
@@ -218,7 +218,7 @@ an index into the list or forms on the page (i.e. form 1 is the
 first form on the page).
 </pre>
 <p>Here is the pseudocode for how <cite>formvalue</cite> and <cite>submit</cite> figure out
-what form field to use (function <cite>twill.commands.state.get_form_field</cite>):</p>
+what form field to use (function <cite>twill.commands.browser.get_form_field</cite>):</p>
 <pre class="literal-block">
 search current form for exact match to fieldname;
 if single (unique) match, select.
@@ -415,7 +415,7 @@ well as for other toolkits, but the API is still unstable.</p>
 <li>execute directories/directory trees?</li>
 <li>record scripts</li>
 <li>systematize variable handling a bit better: __ vs $</li>
-<li>expose 'state' &amp; document re Grig; regexp esp.</li>
+<li>expose 'browser' &amp; document re Grig; regexp esp.</li>
 <li>basic auth (<a class="reference" href="http://www.quixote.ca/qx/HttpBasicAuthentication">http://www.quixote.ca/qx/HttpBasicAuthentication</a>?) example.</li>
 <li>HTTP-EQUIV refresh/redirect commands w/in mechanize? (issola.caltech.edu/~t/transfer/redir-test.html)</li>
 <li>twill-fork: make file writing stuff optional; test massive fork fn.</li>
@@ -449,7 +449,7 @@ MATSUNO Tokuhiro, and Elvelind Grandin.</p>
 <p>Patches have been submitted by: Joeri van Ruth, Paul McGuire, Ed Rahn,
 Nic Ferrier, Robert Leftwich, James Cameron, and Tommi Virtanen.  Thanks!</p>
 <p>This document was written by C. Titus Brown, <a class="reference" href="mailto:titus&#64;caltech.edu">titus&#64;caltech.edu</a>.
-Last updated October '05.</p>
+Last updated November '05.</p>
 </div>
 </div>
 </body>
