@@ -1,3 +1,7 @@
+2005-11-05  Titus Brown  <t@issola.caltech.edu>
+
+	* Changed 'state' variable to 'browser' in commands.py
+
 2005-11-04  Titus Brown  <t@issola.caltech.edu>
 
 	* Put test/ tests into a nosetest-compatible format.  Yay,
